(library
 (name ast_check)
 (public_name less-power.ast-check)
 (modules
  (:standard \ ast_check_bin))
 (libraries
  common
  fmt
  fileutils
  ppxlib
  ppxlib.astlib
  ppxlib.traverse_builtins
  compiler-libs.common ; native compiler-libs, required as dep. of wrapper
  ocaml-compiler-libs.common ; wrapper library
  ocaml-compiler-libs.shadow))

(executable
 (name ast_check_bin)
 (public_name lp-ast-check)
 (package less-power)
 (modules ast_check_bin)
 (libraries common ast_check fmt))
