(library
 (name stdlib_alerts)
 (public_name less-power.stdlib-alerts)
 (modules stdlib_alerts)
 (preprocess (pps signature_builder_ppx))
 (libraries signature_builder))

(library
 (name threads_alerts)
 (public_name less-power.threads-alerts)
 (modules threads_alerts)
 (preprocess (pps signature_builder_ppx))
 (libraries signature_builder threads unix))
